# seenopsis

./: paths.py  pyproject.toml  seenopsis.py  seenopsis_data.py  variable.py  variable_types.py
html_data/: foo.html
