[tool.poetry]
name = "seenopsis"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.21.3"
pandas = ">=1.1,<1.1.5"
matplotlib = "^3.4.3"
six = "^1.16.0"
pytz = "^2022.1"
pyparsing = "^3.0.8"
kiwisolver = "^1.4.2"
cycler = "^0.11.0"
python-dateutil = "^2.8.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
